@@ -89,7 +89,7 @@ public class UserService {
 		Authentication auth = SecurityContextHolder.getContext().getAuthentication();
 		
 		return roles != null && auth != null && 
-				auth.getAuthorities().stream().anyMatch(a -> List.of(roles).contains(a.getAuthority()));
+				auth.getAuthorities().stream().anyMatch(a -> Arrays.asList(roles).contains(a.getAuthority()));
 	}
 	
 }
